1999-08-23  Laurent Pautet  <pautet@scapin.enst.fr>

	* broca-buffers.adb, broca-buffers.ads, broca-exceptions.adb,
 	broca-exceptions.ads, broca-giop.adb, broca-iiop.adb,
 	broca-inet_server.adb, broca-marshalling-refs.adb,
 	broca-marshalling.adb, broca-marshalling.ads, broca-object.adb,
 	broca-repository.adb, broca-rootpoa.adb, broca-sequences.adb,
 	broca-server.adb: First attempt to reduce use of Buffer.Pos and
 	Buffer.Buffer.
	
	* broca-flags.ads: race condition detected. Set N_Server_Task to
 	1.
	
1999-08-23  Laurent Pautet  <pautet@dorine.enst.fr>

	* broca-buffers.ad[bs]: New unit to handle buffers.
	
	* all files: Update files to take new unit into account.

1999-08-21  Laurent Pautet  <pautet@dorine.enst.fr>

	* broca-giop.ads: Change header size to 12. Define No_Context to
	exotic value in order to check context alignment.

	* broca-giop.adb, broca-server.adb: Receive body message at index
 	Message_Header_Size in a buffer to preserve interoperability.
	Do not always align body size to 16.

	* broca-marshalling.adb, broca-marshalling.ads: Define Dump
 	procedure to dump buffers.

	* broca-stream.adb: Dump incoming and outgoing stream.
	