@@ -4,7 +4,7 @@ with Broca.Buffers; use Broca.Buffers;
 package Broca.Ior is
    --  Convert a string representing an IOR, as decribed in CORBA V2.2 11.6.6,
    --  into a buffer ready for unmarshalling.
-   function Ior_String_To_Buffer (Str : CORBA.String) return Buffer_Access;
+   function Ior_String_To_Buffer (IOR : CORBA.String) return Buffer_Descriptor;
 
    --  Convert a buffer containing an marshalled contents of an IOR into
    --  a string.
